# ibis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
ibis/: cli.py  core.py  db.py  ghsa.py  models.py  npm.py  resolver.py  server.py  tiers.py
ibis/sync/: condor.py  corvus.py  ghsa.py  shrike.py
tests/: conftest.py  test_add_command.py  test_condor_sync.py  test_core.py  test_corvus_sync.py  test_create_ghsa.py  test_curate.py  test_e2e.py  test_ghsa_module.py  test_ghsa_sync.py  test_register_finding.py  test_resolver.py  test_shrike_sync.py  test_tiers.py
tests/fixtures/: condor_report_empty.json  condor_report_flowise.json  corvus_curated_cs16.md  corvus_report_glimind.json  shrike_finding_collaborator.json  shrike_finding_no_ghsa.json  shrike_finding_with_ghsa.json
