[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobaltosec-ibis"
version = "0.1.0"
description = "CobaltoSec disclosure management — track, tier, and publish security advisories"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "mcp>=1.0",
]

[project.scripts]
ibis = "ibis.cli:app"
ibis-server = "ibis.server:run"

[tool.hatch.build.targets.wheel]
packages = ["ibis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
